_sass/style.sass
$rounding: .5em

*
  box-sizing: border-box

body
  position: relative
  font-family: Poppins
  letter-spacing: 2px
  line-height: 1.5em
  margin: 0

h1,
h2,
h3,
h4,
h5,
h6
  font-weight: 500
  letter-spacing: 4px
  line-height: 1em

h1
  font-size: 3em
  letter-spacing: 20px
  text-transform: uppercase
  line-height: 1.5em

h2
  font-size: 2.5em
  letter-spacing: .5em
  line-height: 2em
  text-transform: uppercase

h3
  font-size: 2em
  font-weight: 600

h4
  font-size: 1.5em
  color: #333

small
  font-size: .75em

address
  display: inline
  font-style: normal

a
  color: #333
  font-weight: 600
  text-decoration: none
  transition: text-shadow .4s ease
  &:hover
    text-shadow: 0px 0px 3px #ffffff77

p
  font-family: Lora
  font-size: 1.2em
  line-height: 1.5em

header
  align-items: center
  background: transparent
  display: flex
  justify-content: space-between
  position: absolute
  text-align: center
  width: 100%
  z-index: 1

.logo
  img
    display: inline
    margin-left: 0.5em
    padding: 10px
    width: 80px

.social
  margin: 0 1em
  a
    display: inline-block

.link
  margin: 0 .1em

main,
section
  height: 100vh
  height: var(--app-height)

main
  overflow: auto
  scroll-snap-type: y mandatory
  z-index: 2
  & > section
    position: relative
    scroll-snap-align: start
    h2
      font-weight: 700
      margin: 0 auto
      position: absolute
      text-align: center
      top: 0
      z-index: 1
    &:first-child:before
      content: ''
    &:last-child:after
      content: ''
    &:before
      content: url(../images/up.svg)
      top: 2.3em
    &:after
      content: url(../images/down.svg)
      bottom: 2.3em
    &:after,
    &:before
      z-index: 1

slider
  scroll-snap-align: start
  scroll-snap-type: x mandatory
  display: flex
  -webkit-overflow-scrolling: touch
  overflow-x: scroll
  & > section
    min-width: 100vw
    padding: 0 3em
    position: relative
    &:first-child:before
      content: ''
      z-index: 1
    &:last-child:after
      content: ''
    &:before
    &:after
      content: url(../images/right.svg)
      right: .25em
    &:before
      content: url(../images/left.svg)
      left: .25em

main,
slider
  & > section
    &:after,
    &:before
      opacity: .5
      font-family: system-ui
      font-size: 2em
      position: absolute
      animation: pulse 1s infinite

.x-learned
  slider > section
    &:after,
    &:before
      animation: none
      opacity: .2

.y-learned
  main > section
    &:after,
    &:before
      animation: none
      opacity: .2

section
  align-items: center
  display: flex
  justify-content: center
  padding: 6em 0
  scroll-snap-align: start
  text-align: center
  &:not(.slider)
    padding: 6em 1em
  & > header
    flex-direction: column
    top: 0
    *
      padding: 0 3em
    p
      margin-top: 3em

footer
  bottom: 0
  display: flex
  font-size: .9em
  justify-content: space-between
  letter-spacing: 1px
  padding: 0.5em 1em
  position: absolute
  text-align: center
  transition: color .7s ease
  width: 100%

label
  display: block
  margin-bottom: 2em

::placeholder
  color: #666

input
  -webkit-appearance: none
  background: none
  border: none
  border-radius: 5px
  box-shadow: inset 1px 1px 3px #0000002b, inset -1px -1px 3px #FFFFFF77
  color: black
  font-family: inherit
  letter-spacing: 1px
  margin-bottom: 1em
  outline: none
  padding: 1em
  &[type=submit]
    background: #222
    box-shadow: inset 1px 1px 3px #888888, inset -1px -1px 3px #000, 1px 1px 3px #0000004a, -1px -1px 3px #FFFFFF2e
    color: #FFF
    cursor: pointer
    letter-spacing: 5px
    padding: 1em 2.5em
    text-transform: uppercase
    &:active
      box-shadow: inset 1px 1px 3px #00000055, inset -1px -1px 3px #FFFFFF55

@keyframes pulse
  0%
    transform: scale(0.9)
    opacity: .2
  70%
    transform: scale(1.5)
    opacity: .7
  100%
    transform: scale(1)
    opacity: .2

@supports (-webkit-touch-callout: none)
  main > section:after
    bottom: 3.5em

@media only screen and (max-width: 640px)
  body
    font-size: 13px
  main > section h2
    top: 7px
  .stacked > *
    max-width: 90% !important
  .columns
    flex-direction: column
  h2
    letter-spacing: 2px
  .social img
    height: 20px
    width: 20px
  input
    width: 100%

.abv
  font-size: 1.5em
  margin: 0 0 .5em
  &:after
    content: '%'

.stacked
    flex-direction: column
    flex-wrap: wrap
    & > *
      max-width: 65%

.columns
  flex-wrap: wrap
  justify-content: space-evenly
  row-gap: 10px
  column-gap: 20px

.last-slide
  background: black !important
  color: white
  a
    color: #777

.charts
  max-height: 30%

header
  img,
  svg
    transition: filter .7s ease

footer
  transition: color .7s ease
  a
    color: black

.dark
  header
    img,
    svg
      filter: invert(1)
  footer
    color: white

